--- a/templates/agendamento.html
+++ b/templates/agendamento.html
@@ -6,7 +6,7 @@
     <title>Agendar Serviço - AgendeJá</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" href="../../imgs/Miniatura.png"/>
+    <link rel="icon" href="../static/imgs/Miniatura.png">
     <!-- Font Awesome para ícones -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
     <!-- Flatpickr para seleção de data/hora -->
