--- a/templates/profissional/editar.html
+++ b/templates/profissional/editar.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Editar Perfil - Tatuador</title>
-  <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Font Awesome para ícones -->
+  <link rel="icon" href="../../static/imgs/Miniatura.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
   <style>
     .dropdown:hover .dropdown-menu {
@@ -282,7 +281,7 @@
     <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
       <div>
         <div class="flex items-center mb-4">
-          <img src="../../imgs/logoBrancaa.png" alt="Logo AgendeJá" class="h-10 w-auto"/>
+          <img src="../../static/imgs/logoBrancaa.png" alt="Logo AgendeJá" class="h-10 w-auto"/>
         </div>
         <p class="text-gray-400">A maneira mais fácil de agendar serviços profissionais.</p>
       </div>
