--- a/templates/profissional/servicos.html
+++ b/templates/profissional/servicos.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Meus Serviços - AgendeJá</title>
-    <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Font Awesome para ícones -->
+    <link rel="icon" href="../../static/imgs/Miniatura.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
     <style>
         .group:hover .group-hover\:block {
@@ -50,7 +49,7 @@
 <header class="bg-white shadow-md">
     <div class="container mx-auto px-4 py-4 flex justify-between items-center">
         <div class="flex items-center">
-            <a href="../cliente/cliente.html"><img src="../../imgs/Logo.png" alt="Logo AgendeJá"
+            <a href="../cliente/cliente.html"><img src="../../static/imgs/Logo.png" alt="Logo AgendeJá"
                                                    class="h-12 w-auto"/></a>
         </div>
         <nav class="hidden md:flex space-x-6">
@@ -344,7 +343,7 @@
         <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
             <div>
                 <div class="flex items-center mb-4">
-                    <img src="../../imgs/logoBrancaa.png" alt="Logo AgendeJá" class="h-10 w-auto"/>
+                    <img src="../../static/imgs/logoBrancaa.png" alt="Logo AgendeJá" class="h-10 w-auto"/>
                 </div>
                 <p class="text-gray-400">A maneira mais fácil de agendar serviços profissionais.</p>
             </div>
