--- a/templates/profissional/Individual.html
+++ b/templates/profissional/Individual.html
@@ -4,10 +4,8 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Marcos Silva - Barbeiro | AgendeJá</title>
-  <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" href="../../imgs/Miniatura.png">
-  <!-- Font Awesome para ícones -->
+  <link rel="icon" href="../../static/imgs/Miniatura.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 </head>
 <body class="min-h-screen flex flex-col">
@@ -530,7 +528,7 @@
     <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
       <div>
         <div class="flex items-center mb-4">
-          <img src="../../imgs/logoBrancaa.png" alt="Logo AgendeJá" class="h-10 w-auto"/>
+          <img src="../../static/imgs/logoBrancaa.png" alt="Logo AgendeJá" class="h-10 w-auto"/>
         </div>
         <p class="text-gray-400">A maneira mais fácil de agendar serviços profissionais.</p>
       </div>
